--- a/ConsoleSearch/ConsoleSearch.csproj
+++ b/ConsoleSearch/ConsoleSearch.csproj
@@ -6,11 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="SQLitePCLRaw.core" />
-    <None Remove="Microsoft.Data.Sqlite" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.8" />
+    <PackageReference Include="System.Text.Json" Version="9.0.8" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shared\Shared.csproj" />
